add popup metro stations

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -116,6 +116,7 @@
 @import "./components/search/search-filter";
 @import "./components/search/search-hero";
 @import "./components/search/search-sorting-popup";
+@import "./components/search/search-station-popup";
 @import "./components/search/search-map";
 
 @import "./components/object/object";
