--- a/src/assets/styles/base/variables.scss
+++ b/src/assets/styles/base/variables.scss
@@ -28,6 +28,7 @@ $black-700: #0D192B;
 
 $cyan-400: #10A2EC;
 
+$blue-50: #85D4F3;
 $blue-100: #F1F4F9;
 $blue-150: #E3EBF6;
 $blue-200: #019EE0;
@@ -44,8 +45,11 @@ $blue-950: #154482;
 
 $brown-700: #745C2F;
 
+$cyan-400: #5BBEBB;
+
 $gray-400: #A1ABB9;
 $gray-500: #E8E8E8;
+$gray-600: #ACADAF;
 $gray-700: #FFFFFFA6;
 $gray-800: #64749A;
 $gray-900: #4B6AA6;
@@ -58,10 +62,18 @@ $green-500: #21A038;
 $green-600: #009A49;
 $green-700: #029A55;
 
+$lime-400: #B1D332;
+
+
+$orange-200: #FAA400;
 $orange-300: #EF8807;
 $orange-400: #FDAE38;
 $orange-500: #FE9410;
 $orange-600: #DA8418;
+$orange-700: #F9A030;
+$orange-800: #FBAA33;
+
+$purple-400: #B61D8E;
 
 $red-300: #FF0000;
 $red-400: #FC4210;
@@ -71,4 +83,12 @@ $red-700: #EF1E25;
 $red-800: #DE1100;
 $red-900: #CD0505;
 
+$rose-300: #FFA8AF;
+$rose-400: #DE64A1;
+$rose-500: #EA4184;
+
+$violet-400: #9999FF;
+
 $yellow-400: #FFCC00;
+$yellow-500: #FFD803;
+
