--- a/src/views/components/search/search-sidebar.pug
+++ b/src/views/components/search/search-sidebar.pug
@@ -214,7 +214,7 @@ aside.search-sidebar
           .search-sidebar__header
             .search-sidebar__left
               h3.search-sidebar__title Метро рядом
-              button.search-sidebar__button(type="button") Выбрать станции
+              button.search-sidebar__button.search-sidebar-station__button(type="button") Выбрать станции
             .search-sidebar__right
               .search-sidebar__help.search-sidebar__help--stations
                 svg(width="16" height="16" viewBox="0 0 16 16")
