--- a/src/assets/styles/base/variables.scss
+++ b/src/assets/styles/base/variables.scss
@@ -24,7 +24,6 @@ $black-400: #263141;
 $black-500: #263238;
 $black-550: #194A66;
 $black-600: #0D192B;
-$black-700: #0D192B;
 
 $cyan-400: #10A2EC;
 
@@ -42,6 +41,7 @@ $blue-800: #386AE0;
 $blue-850: #0252A2;
 $blue-900: #14448B;
 $blue-950: #154482;
+$blue-1000: #303a4a;
 
 $brown-700: #745C2F;
 
@@ -51,6 +51,7 @@ $gray-400: #A1ABB9;
 $gray-500: #E8E8E8;
 $gray-600: #ACADAF;
 $gray-700: #FFFFFFA6;
+$gray-750: #64749A;
 $gray-800: #64749A;
 $gray-900: #4B6AA6;
 
