--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -126,3 +126,4 @@
 @import "./components/object/object-search";
 @import "./components/object/object-conditions";
 @import "./components/object/object-card";
+@import "./components/object/object-gallery";
