--- a/src/assets/styles/components/how-to-book/how-to-book-popup.scss
+++ b/src/assets/styles/components/how-to-book/how-to-book-popup.scss
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba($color: $black-600, $alpha: 0.75);
+  background-color: $blue-1000;
   z-index: -1;
   opacity: 0;
   visibility: hidden;
