--- a/src/assets/styles/components/object/object-information.scss
+++ b/src/assets/styles/components/object/object-information.scss
@@ -22,8 +22,10 @@
 
   &__item {
     display: flex;
-    align-items: center;
     gap: 12px;
+    span {
+      margin-top: 3px;
+    }
     span,
     a {
       font-size: 16px;
